force-app/main/default/objects/Apttus_Config2__LoyaltyPointAccrualAdjustmentItem__c/Apttus_Config2__LoyaltyPointAccrualAdjustmentItem__c.object-meta.xml
<CustomObject>
    <description>Represents loyalty points accrual adjustments for a product/service</description>
    <label>Loyalty Point Accrual Adjustment Item</label>
    <nameField>
        <displayFormat>AA-{0000000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Point Accrual Adjustment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>