force-app/main/default/objects/Apttus_Config2__LoyaltyPointAccrualAdjustmentItem__c/fields/Apttus_Config2__AccrualSummaryId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AccrualSummaryId__c</fullName>
    <description>ID of the associated point accrual summary</description>
    <inlineHelpText>ID of the associated point accrual summary</inlineHelpText>
    <label>Accrual Summary</label>
    <referenceTo>Apttus_Config2__LoyaltyPointAccrualSummary__c</referenceTo>
    <relationshipName>AdhocLoyaltyPointAccrualItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>