force-app/main/default/objects/Apttus_Config2__LoyaltyPointAccrualAdjustmentItem__c/fields/Apttus_Config2__Points__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Points__c</fullName>
    <description>The loyalty points accrued for the line item</description>
    <inlineHelpText>The loyalty points accrued for the line item</inlineHelpText>
    <label>Points</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>